update diff in diff notebook

--- a/10_code/Control_Treatment_Extraction.ipynb
+++ b/10_code/Control_Treatment_Extraction.ipynb
@@ -6,13 +6,11 @@
    "source": [
     "________\n",
     "## Final Data Processing\n",
-    "\n",
-    "Want to understand the full experimental design? Here's the process, we apologize in advance.\n",
     "________\n",
     "\n",
     "#### **Part 1: Definitions**\n",
     "\n",
-    "This notebook walks through the final data processing for identifying \"valid observations\" that can be used in the final regression analysis. A \"valid observation\" is defined as a *collection of posts* from a single profile that matches the required pattern for either a control observation or a treatment observation. The following definitions wil be used throughout the notebook and are the basis for this causal experimental design.\n",
+    "This notebook walks through the final data processing for identifying \"valid observations\" that can be used in the final diff-in-diff regression analysis. A \"valid observation\" is defined as a *collection of posts* from a single profile that matches the required pattern for either a control observation or a treatment observation. The following definitions wil be used throughout the notebook and are the basis for this causal experimental design.\n",
     "\n",
     "- **Viral Post**: A single post whose (square root transformed) engagement exceeds 3 standard deviations from the profile mean engagement.\n",
     "\n",
