--- a/10_code/diff_in_diff.ipynb
+++ b/10_code/diff_in_diff.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "## Diff-In-Diff Analysis\n",
     "\n",
-    "This notebook walks through the different linear regression models generted using the treatment/control dataset generated earlier. First, a baseline model is created using only the necessary components to set up the diff-in-diff analysis: Treatment, Time_Frame, Interaction. Here, the interaction term represents the average treatment effect on baseline engagment (standard deviations of square root engagement) of a single viral post. This baseline model has the following coefficients:\n",
+    "This notebook walks through the different linear regression models generted using the treatment/control dataset generated in the `10_code\\Control_Treatment_Extraction.ipynb` notebook. First, a baseline model is created using only the necessary components to set up the diff-in-diff analysis: Treatment, Time_Frame, Interaction. Here, the interaction term represents the average treatment effect on baseline engagment (standard deviations of square root engagement) of a single viral post. This baseline model has the following coefficients:\n",
     " \n",
     "a. `Treatment`: Expected change in z-score square root engagement (SRE) per viral post, independent of time. Represented in standard deviations of SRE.\n",
     "b. `Time_Frame`: Expected standard deviations change in SRE with no viral post.\n",
